# pang_tut

./: CMakeLists.txt  Shaders.h  main_mine.cpp  multi_disp.cpp
Shaders/: f1.frag  v1.vert
